<resources>
    <string name="app_name">JunoChallenge</string>

    <!-- Activity's -->

    <string name="activity_login">User Password</string>
    <string name="activity_main">Juno Android</string>
    <string name="activity_retrofit">Retrofit Test</string>
    <string name="activity_user">User Test</string>

    <string name="activity_main_default_text">Choose some repo clicking into the search box at the Toolbar above</string>

    <!-- Errors -->

    <string name="error_loading_user">Error loading User.</string>
    <string name="empty_commits">This repository does not contains commits.</string>
    <string name="no_internet">No network connection. Please try again later.</string>

    <!-- Menu -->

    <string name="search">Search</string>
    <string name="search_hint">Type repo name</string>

    <!-- Layout -->

    <string name="activity_details__id">Repo Id: </string>
    <string name="activity_details__node_id">Repo Node Id:</string>
    <string name="activity_details__name">Repo Name:</string>
    <string name="activity_details__full_name">Repo Full Name:</string>
    <string name="activity_details__private">Repo Private:</string>
    <string name="activity_details__owner_id">Repo Owner Id:</string>
    <string name="activity_details__owner_login">Repo Owner Login:</string>
    <string name="activity_details__stargazers_count">Repo Stargazers Count:</string>
    <string name="activity_details__watchers_count">Repo Watchers Count:</string>
    <string name="activity_details__forks">Repo Forks:</string>
    <string name="activity_details__open_issues">Repo Open Issues:</string>
    <string name="activity_details__score">Repo Score:</string>

    <string name="activity_details__id__hint">82128465</string>
    <string name="activity_details__node_id__hint">MDEwOlJlcG9zaXRvcnk4MjEyODQ2NQ==</string>
    <string name="activity_details__name__hint">Android</string>
    <string name="activity_details__full_name__hint">open-android/Android</string>
    <string name="activity_details__private__hint">false</string>
    <string name="activity_details__owner_id__hint">23095877</string>
    <string name="activity_details__owner_login__hint">open-android</string>
    <string name="activity_details__stargazers_count__hint">8679</string>
    <string name="activity_details__watchers_count__hint">8679</string>
    <string name="activity_details__forks__hint">2525</string>
    <string name="activity_details__open_issues__hint">21</string>
    <string name="activity_details__score__hint">119.72391</string>

    <string name="retrofit_empty_repos">There are no repos for the keyword \'%1$s\'.</string>
    <string name="retrofit_error">Repository could not be loaded.</string>
</resources>
